--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud
+spring.datasource.url=jdbc:mysql://localhost:3306/dbbank
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -8,4 +8,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=8090
+server.port=8091
