--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/bankOnline?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/bankrestore
 
 spring.datasource.username=root
 spring.datasource.password=969696
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
