implementacion del JWT y de metodo destruccion de token

--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/bankrestore
+server.port=8091
 
+spring.datasource.url = jdbc:mysql://localhost:3306/bankrestore
 spring.datasource.username=root
 spring.datasource.password=969696
 
@@ -9,4 +10,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=8091
+#JWT
+security.jwt.secret = 45fafjafafhoirq
+security.jwt.issuer = Main
+security.jwt.ttlMillis = 604800000
+
+
