adding login & register user

--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8091
+
+#JWT
+security.jwt.secret = 45fafjafafhoirq
+security.jwt.issuer = Main
+security.jwt.ttlMillis = 604800000
