--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bankrestore
+spring.datasource.url=jdbc:mysql://localhost:3306/dbbank
 spring.datasource.username=root
-spring.datasource.password=969696
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=none
